Application fail to launch with early access build 150 in both Oracle Linux 7.0 and Ubuntu

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: deploy
    • linux
    • Verified

      Steps to reproduce

      1. Download latest 150 ea build from artifacts website.

      2. extract the build to a folder say 'jdk150' and set export
      JAVA_HOME='jdk150' and export PATH=$JAVA_HOME/bin:$PATH

      3. download the attached simple normal jar to folder 'simplenormaljar'

      4. execute the following command at command line.

      javapackager -deploy -verbose -BmainJar=com.greetings.jar -srcdir simplenormaljar -srcfiles com.greetings.jar -Bclasspath=com.greetings.jar -appclass com.greetings.App1 -outdir bundles -native rpm -name SimpleTest

      5. check the attached log "build150_error_log.txt" for complete execution log.

      here is the snippet of error i am facing

      <Snippet>
      /opt/SimpleTest/SimpleTest
      Failed to find library. /opt/SimpleTest/runtime/lib/amd64/jli/libjli.so
      SimpleTest Failed to locate JLI_Launch
      SimpleTest Failed to launch JVM

      </Snippet>

      6. Also Check the following contents in log file.

      Module jdk.crypto.pkcs11 does not exist.
      Module java.httpclient does not exist.

            Assignee:
            Victor Drozdov (Inactive)
            Reporter:
            Ramesh Gangadhar
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: