8171858: Application fail to launch with early access build 150 in both Oracle Linux 7.0 and Ubuntu

Reviewed-by: cbensen